src/styles/app.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import './_atoms/buttons';

html {
    font-size: 62.5%;
}

ion-content {
    scrollbar-width: 0;

    &::-webkit-scrollbar {
        display: none;
    }
}

@layer base {
    body {
        @apply text-16 font-raleway;
    }
}

